# solver_python

./: .gitignore  README.md  cg.py  conda_requirements.txt  helper.py  main.py  mmInfo.py  poetry.toml  pyproject.toml  solver.ipynb
matrix/: bcsstk14.npz
