[tool.poetry]
name = "solver"
version = "0.1.0"
description = ""
authors = ["gchen <gchen@yahoo-corp.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
rich = "^13.4.2"
scipy = "^1.10.1"
numpy = "^1.24.3"
numba = "^0.57.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"